nginx-ingress/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: nginx-ingress
    meta.helm.sh/release-namespace: nginx-ingress
    ovn.kubernetes.io/vpc: ovn-cluster
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: nginx-ingress
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.12.3
    helm.sh/chart: ingress-nginx-4.12.3
  name: nginx-ingress-ingress-nginx-controller
  namespace: nginx-ingress
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
  - name: https
    port: 443
    protocol: TCP
  - name: model-benchmark-frontend-svc
    port: 10000
    protocol: TCP
  - name: vllm
    port: 10001
    protocol: TCP
  - name: nextchat
    port: 10002
    protocol: TCP

  - name: argocd
    port: 10010
    protocol: TCP
  - name: grafana
    port: 10011
    protocol: TCP

  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: nginx-ingress
    app.kubernetes.io/name: ingress-nginx
  type: LoadBalancer
